# mailing_manager

./: README.md  cron.py  email_user_manager.py  forms.py  pyproject.toml  utils.py
blogs/: admin.py  forms.py  models.py  urls.py  views.py
blogs/migrations/: 0001_initial.py  0002_alter_blog_options.py  0003_alter_blog_slug.py
blogs/templates/blogs/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
config/: settings.py  urls.py
mailings/: admin.py  forms.py  hide_path.py  models.py  urls.py  views.py
mailings/management/commands/: populate_db.py  send_mailings.py
mailings/migrations/: 0001_initial.py  0002_alter_mailing_status.py  0003_alter_mailing_periodicity.py  0004_alter_mailing_status.py  0005_client_owner_mailing_owner_message_owner.py  0006_alter_mailing_options.py
mailings/templates/: base.html  home.html
mailings/templates/clients/: client_confirm_delete.html  client_detail.html  client_form.html  client_list.html
mailings/templates/includes/: inc_menu.html  pagination.html
mailings/templates/mailings/: base.html  home.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html
mailings/templates/messages/: message_confirm_delete.html  message_detail.html  message_form.html  message_list.html
mailings/templatetags/: my_tags.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_managers.py
users/templates/: login.html
users/templates/users/: new_password.html  user_confirm_delete.html  user_form.html  user_list.html  (+1 more)
(+1 files in other folders)
